final changes to service cta

--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -56,7 +56,7 @@
 
 .tall-header {
     position: relative;
-    padding:0;
+    padding:0; 
     background-color: $primary;
     img {
         width: 100%;
@@ -206,6 +206,7 @@
         }
         .service-cta, .project-cta {
             margin-top: 30px!important;
+            margin-bottom: 170px;
 
             .service-cta-content, .project-cta-content {
                 color: $primary;
