--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -869,6 +869,15 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
 
         a {
             width: 100%;
+            max-height: 285px;
+            height: 100%;
+
+            img {
+                max-height: 285px;
+            	height: 100%;
+            	display: block;
+            	object-fit: cover;
+            }
         }
         img {
             width: 100%;
