--- a/sass/partials/_pages.scss
+++ b/sass/partials/_pages.scss
@@ -871,6 +871,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#444444",endCo
             width: 100%;
             max-height: 285px;
             height: 100%;
+            overflow: hidden;
 
             img {
                 max-height: 285px;
